created utils for opening and closing the NUIs

--- a/SAL_Characters/html/css/styles.css
+++ b/SAL_Characters/html/css/styles.css
@@ -1,6 +1,14 @@
 body {
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0);
   color: black;
+}
+
+#char-select-container {
+  display: none;
+}
+
+#char-creation-container {
+  display: none;
 }
 
 .container {
